# dependency-rejection-samples

./: .gitignore  README.md
BookingApi/: AssemblyInfo.fs  BookingApi.fsproj
FSharp/: BookingApi.sln  Build.fsx  build.sh  paket.dependencies
FSharp/BookingApi/: App.config  BookingApi.fsproj  Composition.fs  MaîtreD.fs  MaîtreDTests.fs  paket.references
Haskell/: BookingApi.cabal  Composition.hs  DB.hs  Discordia.hs  LICENSE  MaitreD.hs  MaitreDTests.hs  MaîtreD.hs  MaîtreDTests.hs  stack.yaml
